--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NewsPaperApps</string>
+    <string name="search_title">search_title</string>
+    <string name="search_hint">News topic</string>
 </resources>
