--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="interntAlertTitle">Alert Message</string>
     <string name="internetAlertMessage">No internet connection</string>
     <string name="firealert">ok</string>
+    <string name="amit">Amit header</string>
 </resources>
